# lgl

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp  shaderprogram.cpp  shaderprogram.hpp  util.cpp  util.hpp
src/scenes/: ebo_rectangle.cpp  ebo_rectangle.hpp  hello_triangle.cpp  hello_triangle.hpp  intro_shaders.cpp  intro_shaders.hpp
src/scenes/ebo_rectangle/: ebo_rectangle.cpp  ebo_rectangle.hpp
src/scenes/getting_started/hello_triangle/: hello_triangle.cpp  hello_triangle.hpp
src/scenes/getting_started/shaders/: shader.vert.glsl  shaders.cpp  shaders.hpp
src/scenes/getting_started/textures/: shader.frag.glsl  shader.vert.glsl  textures.cpp  textures.hpp
src/scenes/getting_started/transformations/: shader.frag.glsl  shader.vert.glsl  transformations.cpp  transformations.hpp
src/scenes/hello_triangle/: hello_triangle.cpp
src/scenes/intro_shaders/: intro_shaders.cpp  shader.frag.glsl
